# ROS2_meetup_IUTeam

./: README.md  Презентация команды IU.pptx
instructions/: 00. Команда.md  01. Постановка задачи.md  02. Установка micro ROS на Raspberry Pi Pico.md  03. Установка ROS2 на одноплатный компьютер Raspberry Pi.md  04. Установка ROS2 на десктоп.md  05. Проверка работоспособности и связи микроконтроллера и компьютера.md  06. Настройка лидара.md  08. Доработка прошивки microROS.md  09. RVIZ.md
micro_ros/rpi_pico/: CMakeLists.txt  bno085_imu.c  bno085_imu.h  motor_controller.c  motor_controller.h  pico_micro_ros_hackathon.c
